--- a/myblog/_includes/card.html
+++ b/myblog/_includes/card.html
@@ -5,7 +5,7 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:title"   content="{{ page.title }}">
 <meta property="og:url"   content="{{ site.url }}{{ page.url }}">
-<meta property="og:description" content="{{ site.description }}">
+<meta property="og:description" content="{{ page.description }}">
 
 
 {% if page.largeimage %}
